Renombrar el sistema de "Adquisiciones" a "Gestión de Rutas" en todos los archivos; actualizar configuraciones de Docker y Angular; eliminar controladores y modelos obsoletos relacionados con adquisiciones.

--- a/AdquisicionesWEB/src/index.html
+++ b/AdquisicionesWEB/src/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
   <head>
-    <title>Adquisiciones ADRES</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>COOTRANSTAME - Sistema de Rutas</title>
     <base href="/">
-    <!-- Font Awesome para iconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="assets/cootranstame-logo.png">
+    <meta name="description" content="Sistema de gestión de rutas de transporte de COOTRANSTAME">
   </head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
   </body>
 </html>
